# vmx-check

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: cpuid.hpp  main.cpp  msr.hpp  printer.cpp  printer.hpp
src/platform/: msr_linux.cpp  msr_stub.cpp  msr_windows.cpp
src/printer/: json.cpp  json.hpp
src/vmx/: ia32_vmx_basic.cpp  ia32_vmx_basic.hpp  ia32_vmx_entry_ctls.cpp  ia32_vmx_entry_ctls.hpp  ia32_vmx_ept_vpid_cap.cpp  ia32_vmx_ept_vpid_cap.hpp  ia32_vmx_exit_ctls.cpp  ia32_vmx_exit_ctls.hpp  ia32_vmx_pinbased_ctls.cpp  ia32_vmx_pinbased_ctls.hpp  ia32_vmx_procbased_ctls.cpp  ia32_vmx_procbased_ctls.hpp  ia32_vmx_procbased_ctls2.cpp  ia32_vmx_procbased_ctls2.hpp
